# ============================================================================
# pyproject.toml
# ============================================================================
"""
[project]
name = "market-report-agent"
version = "1.0.0"
description = "Portfolio management and market analysis agent using Google ADK"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["adk", "gemini", "finance", "portfolio", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "google-genai>=0.8.0",
    "google-adk>=0.2.0",
    "yfinance>=0.2.40",
    "python-dotenv>=1.0.0",
    "aiosqlite>=0.19.0",
    "pyyaml>=6.0",
]

